crates/tracel-mlir-rs/src/dialect/snapshots/tracel_mlir_rs__dialect__arith__tests__arith.negf.snap
---
source: crates/tracel-mlir-rs/src/dialect/arith.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: f64) -> f64 {
    %0 = arith.negf %arg0 : f64
    return %0 : f64
  }
}
